--- a/index.css
+++ b/index.css
@@ -5,8 +5,53 @@
 }
 
 body{
+    width:100%;
+    height:100%;
     overflow-x:hidden;
+    position:absolute;
 }
+
+#popup{
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+    background-color:rgb(0, 0, 0, 0.3);
+    position:absolute;
+    z-index:1;
+    display:none;
+}
+    #pw_list{
+        width:400px;
+        height:600px;
+        top:50%;
+        left:50%;
+        transform:translate(-50%, -50%);
+        border:1px solid black;
+        background-color:white;
+        position:fixed;
+    }
+        #list_box{
+            width:400px;
+            height:550px;
+        }
+            .list{
+                width:400px;
+                height:50px;
+                float:left;
+                background-color:rgb(240, 240, 240);
+            }
+                .list p{
+                    margin-left:10px;
+                    font-size:14pt;
+                    line-height:50px;
+                }
+        #close{
+            width:50px;
+            height:30px;
+            margin-top:10px;
+            margin-left:170px;
+        }
 
 #title{
     width:100%;
@@ -97,7 +142,7 @@ body{
     margin-left:342px;
     position:relative;
 }
-    button{
+    #button button{
         margin-right:47px;
         font-size:16pt;
         border:1px solid black;
