--- a/index.css
+++ b/index.css
@@ -33,12 +33,13 @@ body{
     }
         #list_box{
             width:400px;
-            height:550px;
+            height:510px;
         }
             .list{
                 width:400px;
                 height:50px;
                 float:left;
+                border-bottom:1px solid #333;
                 background-color:rgb(240, 240, 240);
             }
                 .list p{
@@ -49,7 +50,7 @@ body{
         #close{
             width:50px;
             height:30px;
-            margin-top:10px;
+            margin-top:40px;
             margin-left:170px;
         }
 
