--- a/index.css
+++ b/index.css
@@ -92,59 +92,59 @@ body{
                 background-color:transparent;
             }
 
-        #input{
-            width:50%;
-            height:100%;
+#input{
+    width:50%;
+    height:100%;
+    float:left;
+    margin-top:140px;
+}
+    #input tr{
+        width:530px;
+        height:50px;
+    }
+
+        #input td{
+            margin-bottom:40px;
+        }
+
+        .text{
+            width:120px;
+            height:50px;
             float:left;
-            margin-top:90px;
+            font-size:17pt;
         }
-            #input tr{
-                width:530px;
-                height:50px;
-            }
 
-                #input td{
-                    margin-bottom:40px;
-                }
+    .input_text{
+        width:400px;
+        height:50px;
+        float:left;
+        font-size:17pt;
+    }
 
-                .text{
-                    width:120px;
-                    height:50px;
-                    float:left;
-                    font-size:17pt;
-                }
-
-            .input_text{
-                width:400px;
-                height:50px;
-                float:left;
-                font-size:17pt;
-            }
-
-                .input_text input{
-                    width:100%;
-                    height:100%;
-                    padding-left:10px;
-                    font-size:12pt;
-                    line-height:50px;
-                    border:none;
-                    background-color:rgb(240, 240, 240);
-                }
-
-        input:focus{
-            outline:none;
+        .input_text input{
+            width:100%;
+            height:100%;
+            padding-left:10px;
+            font-size:12pt;
+            line-height:50px;
+            border:none;
+            background-color:rgb(240, 240, 240);
         }
+
+input:focus{
+    outline:none;
+}
 
 #button{
-    width:500px;
+    width:600px;
     height:50px;
     float:left;
     margin-top:50px;
-    margin-left:342px;
+    margin-left:260px;
     position:relative;
 }
     #button button{
-        margin-right:47px;
+        margin-right:30px;
         font-size:16pt;
         border:1px solid black;
         border-radius:3px;
@@ -157,6 +157,11 @@ body{
         }
 
         #result{
+            width:110px;
+            height:45px;
+        }
+
+        #save{
             width:110px;
             height:45px;
         }
