--- a/index.css
+++ b/index.css
@@ -131,6 +131,15 @@ body{
             background-color:rgb(240, 240, 240);
         }
 
+    #result_btn{
+        padding-left:370px;
+    }
+        .result{
+            width:70px;
+            height:30px;
+            font-size:13pt;
+        }
+
 input:focus{
     outline:none;
 }
@@ -140,7 +149,7 @@ input:focus{
     height:50px;
     float:left;
     margin-top:50px;
-    margin-left:260px;
+    margin-left:350px;
     position:relative;
 }
     #button button{
@@ -152,11 +161,6 @@ input:focus{
         background-color:rgb(240, 240, 240);
     }
         #loading{
-            width:110px;
-            height:45px;
-        }
-
-        #result{
             width:110px;
             height:45px;
         }
