불러오기 함수 생성, 저장하기 commit

--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,12 @@
     font-family: 'Gowun Batang', 'regular';
 }
 
+a{
+    display:block;
+    text-decoration:none;
+    color:#333;
+}
+
 body{
     width:100%;
     height:100%;
