저장하기 함수 추가 수정, 불러오기 리스트 스크롤 바 추가 commit

--- a/public/index.css
+++ b/public/index.css
@@ -40,9 +40,11 @@ body{
         #list_box{
             width:400px;
             height:510px;
+            overflow:scroll;
+            overflow-x:hidden;
         }
             .list{
-                width:400px;
+                width:100%;
                 height:50px;
                 float:left;
                 border-bottom:1px solid #333;
